tests/sksl/errors/golden/SwitchTypes.glsl
### Compilation failed:

error: 13: expected 'int', but found 'float2'
error: 14: expected 'int', but found 'float2'
error: 15: expected 'int', but found 'float'
error: 16: expected 'int', but found 'float'
error: 17: expected 'int', but found 'float'
error: 18: expected 'int', but found 'float'
error: 19: case value must be a constant integer
error: 20: expected 'int', but found 'float'
error: 21: case value must be a constant integer
9 errors
